# bend-language-server

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
.zed/: tasks.json
examples/: hello_world.bend
examples/parse/: book.txt  main.rs
src/: example_hover.md  lib.rs  main.rs
src/backend/: builtin_completions.rs  mod.rs
src/introspection/: mod.rs
