[package]
name = "bend-language-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bend-lang = "0.2.33"
miette = "7.2.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["full"] }
tower-lsp = "0.20.0"
