[package]
name = "bend-language-server"
version = "0.1.0"
edition = "2021"
authors = ["mrpedrobraga <mrhenribraga@gmail.com>"]
description = "Language server for the Bend programming language (WIP)."
repository = "https://github.com/mrpedrobraga/bend-language-server/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bend-lang = "0.2.33"
lazy_static = "1.4.0"
miette = "7.2.0"
serde = { version = "1.0.203", features = ["derive"] }
thiserror = "1.0.61"
tower-lsp = "0.20.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.37.0", features = [
    "macros",
    "io-std",
    "rt",
    "rt-multi-thread",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.92" }
tokio = { version = "1.37.0", features = ["macros", "io-util", "rt"] }
